--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-pdf-js": "1.0.37",
     "react-redux": "4.4.8",
     "react-router": "2.8.1",
+    "react-split-pane": "0.1.76",
     "react-widgets": "3.5.0",
     "recharts": "0.18.0",
     "redux": "3.7.2",
