--- a/package.json
+++ b/package.json
@@ -89,12 +89,15 @@
     "classnames": "2.2.5",
     "copy-to-clipboard": "3.0.8",
     "debug": "2.6.9",
+    "decamelize": "https://registry.npmjs.org/decamelize/-/decamelize-1.2.0.tgz",
     "downloadjs": "1.4.7",
     "dropbox": "2.5.12",
     "ease-component": "1.0.0",
+    "install": "0.11.0",
     "latlon-geohash": "1.1.0",
     "lru-cache": "4.1.1",
     "moment": "2.21.0",
+    "npm": "5.8.0",
     "react": "15.6.2",
     "react-addons-css-transition-group": "15.6.2",
     "react-axis": "0.2.5",
