--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["env", "react", "stage-1"],
   "plugins":[
     "transform-class-properties",
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    "transform-es2015-modules-commonjs"
   ]
 }
