--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm": "^5.6.0"
   },
   "jest": {
+    "testURL": "https://localhost/8081",
     "moduleNameMapper": {
       "^.+\\.(css|less|scss)$": "<rootDir>/tests/StyleStub.js",
       "^.+\\.(jpg|png|jpeg|svg)$": "<rootDir>/tests/MediaStub.js"
@@ -56,7 +57,7 @@
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "16.0.0",
+    "babel-jest": "^23.0.0",
     "babel-loader": "6.4.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -82,7 +83,7 @@
     "html-webpack-plugin": "2.30.1",
     "husky": "0.14.3",
     "install": "0.11.0",
-    "jest-cli": "18.1.0",
+    "jest-cli": "^23.0.0",
     "json": "9.0.6",
     "json-loader": "0.5.7",
     "less": "2.7.2",
