--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "babel-preset-stage-1": "6.24.1",
     "babel-register": "6.26.0",
     "css-loader": "0.25.0",
-    "enzyme": "2.9.1",
+    "enzyme": "3.4.0",
+    "enzyme-adapter-react-15": "1.0.6",
     "eslint": "3.19.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-standard": "6.2.1",
