--- a/deploy/google-app-engine/rmaas-dit-1.app.yaml
+++ b/deploy/google-app-engine/rmaas-dit-1.app.yaml
@@ -1,5 +1,5 @@
-runtime: nodejs
-env: flex
+runtime: nodejs8
+env: standard
 
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
