--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "dev-https": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback --https --cert ./cert.pem --key ./key.pem # this is for safari testing",
     "dev-https-cert": "openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 365 -nodes -subj '/CN=localhost'",
     "build-dev": "./node_modules/.bin/webpack --config ./build/webpack.dev.js --progress --colors",
-    "build-only": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
     "build-prodlocal": "./node_modules/.bin/webpack --config ./build/webpack.prodlocal.js --progress --colors",
-    "build": "npm test && npm run build-only",
+    "build": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
     "deploy": "sh ./build/build-prod.sh",
     "test": "npm run test:lint && npm run test:unit",
     "test:watch": "$(npm bin)/jest src/**/*.test.js --verbose --watch",
